--- a/test/testDoc.yaml
+++ b/test/testDoc.yaml
@@ -15,6 +15,7 @@ document:
           tHead:
             - row:
                 nobr: true
+                fontStyle: 'italic'
                 cells:
                     - cell:
                         content: 'Заголовок столбца 1'
@@ -29,8 +30,10 @@ document:
                   - cell:
                       content: 'Ячейка 1'
                   - cell:
+                      fontStyle: 'italic'
                       content: 'Ячейка 2'
                   - cell:
+                      fontWeight: 'bold'
                       content: 'Ячейка 3'
            - row:
                nobr: true
@@ -45,10 +48,12 @@ document:
           content: 'С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. С другой стороны рамки и место обучения кадров способствует подготовки и реализации модели развития.'
       - list:
           - item:
+              fontStyle: 'italic'
               content: 'Не следует, однако, забывать, что сложившаяся структура организации играет важную роль в формировании новых предложений.'
           - item:
               content: 'Разнообразный и богатый опыт говорит нам, что понимание сути ресурсосберегающих технологий способствует подготовке и реализации экспериментов, поражающих по своей масштабности и грандиозности.'
           - item:
+              fontWeight: 'bold'
               content: 'В рамках спецификации современных стандартов, независимые государства формируют глобальную экономическую сеть и при этом - ассоциативно распределены по отраслям.'
   - page:
       - heading:
